hphp/hack/test/decl/memoize_lsb.php
<?hh

final class C {
  <<__MemoizeLSB>>
  public static function f(): int { return 0; }
}
